--- a/_posts/2018-11-06-atcoder-abc086c.markdown
+++ b/_posts/2018-11-06-atcoder-abc086c.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "AtcoderからTravelの実装"
+title:  "AtcoderからTravelingのClojure実装"
 date:   2018-11-06 14:55:06 +0900
 categories: clojure atcoder
 ---
