--- a/_posts/2018-10-31-sicp-1-11.markdown
+++ b/_posts/2018-10-31-sicp-1-11.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "SICP 1.11練習問題"
+title:  "SICP 1.11練習問題 をClojureでといてみた"
 date:   2018-10-31 12:31:06 +0900
 categories: clojure sicp
 ---
