--- a/_posts/2018-11-05-atcoder-abc088b.markdown
+++ b/_posts/2018-11-05-atcoder-abc088b.markdown
@@ -8,7 +8,7 @@ categories: clojure atcoder
 clojureつかうととっても起動が遅いのかつらいですね。
 そのなかでtrampoline使える問題ありました。
 
-[github]でいれました。
+[ここ][github]でいれました。
 
 
 {% highlight clojure %}
